Gramatica/Gramatica.txt
Principales' -> Principales
Principales -> Principal Principales 
Principales -> ''
Principal -> NoTerminal : Agrupado ;
Principal -> ''
Agrupado -> PuedeVenir
Agrupado -> PuedeVenir | Agrupado
PuedeVenir -> NoTerminal TerminalNoTerminal
PuedeVenir -> Terminal TerminalNoTerminal
TerminalNoTerminal -> NoTerminal TerminalNoTerminal
TerminalNoTerminal -> Terminal TerminalNoTerminal 
TerminalNoTerminal -> ''
NoTerminal -> min T
NoTerminal -> may T
NoTerminal -> _ T
NoTerminal -> - T
NoTerminal -> ''
T -> num T
T -> NoTerminal 
T -> ''
Terminal -> ' F '
F -> Diccionario
F -> ''
Diccionario -> ! F 
Diccionario -> " F
Diccionario -> # F
Diccionario -> % F
Diccionario -> & F
Diccionario -> ( F
Diccionario -> ) F
Diccionario -> * F
Diccionario -> + F
Diccionario -> , F
Diccionario -> - F
Diccionario -> . F
Diccionario -> / F
Diccionario -> : F
Diccionario -> ; F
Diccionario -> < F
Diccionario -> = F
Diccionario -> > F
Diccionario -> ? F
Diccionario -> [ F
Diccionario -> ] F
Diccionario -> ^ F
Diccionario -> _ F
Diccionario -> { F
Diccionario -> | F
Diccionario -> } F
Diccionario -> ~ F
Diccionario -> \n F
Diccionario -> \t F
Diccionario -> \\ F
Diccionario -> \' F
